fixed the spacing on the tablet team

--- a/SITE/sass/mediaqueries.scss
+++ b/SITE/sass/mediaqueries.scss
@@ -308,7 +308,7 @@
 
 	#team {
 		section{
-			width: 24.7%;
+			width: 24.6%;
 			p{
 				padding: 0px 10px;
 			}
